fix the title, so it doesn't wrap

--- a/code/style.css
+++ b/code/style.css
@@ -205,6 +205,7 @@ a:hover {
   font-size: 150px;
   line-height: 72px; /* 48% */
   padding-bottom: 25px;
+  white-space: nowrap;
 }
 
 .coffee-group {
